# pyomnigraph

./: 404.html  AGENTS.md  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: build.yml
omnigraph/: basecmd.py  blazegraph.py  docker_util.py  graphdb.py  jena.py  ominigraph_paths.py  omnigraph_cmd.py  omniserver.py  persistent_log.py  qlever.py  rdf_dataset.py  rdfdump.py  rdfdump_cmd.py  server_config.py  shell.py  software.py  sparql_server.py  version.py  virtuoso.py  yamlable.py
omnigraph/resources/examples/: datasets.yaml  servers.yaml
omnigraph/servers/: blazegraph.py  graphdb.py  jena.py  millenniumdb.py  oxigraph.py  qlever.py  stardog.py  virtuoso.py
scripts/: build-stardog-free  gov-quickstart  install  quickstart
search/: search_index.json
tests/: test_omniserver.py  test_qlever.py  test_rdf_dataset_params.py  test_rdfdump.py  test_software_list.py  test_sparql_server.py  test_upload.py
